2010-04-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Documentation for -flatten and -mosaic has
	been improved.

	* magick/transform.c (MosaicImages): The -mosaic command now
	respects the composition option specified by -compose as well as
	the image background color specified by -background.

2010-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/*.c, magick/*.c: Eliminate many benign data race
	conditions.

2010-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick.spec.in: Avoid duplicate copies of documentation
	files.  Put documentation into a versioned directory as used by
	Red Hat and CentOS.  Include archive libraries in developer
	package.

	* PerlMagick/Makefile.PL.in: Include support for DESTDIR so that
	RPM builds find the installed GraphicsMagick library.

2010-04-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Under Solaris, make sure that OpenWindows Type1
	fonts do exist before deciding to use them.  OpenSolaris does not
	provide these fonts.

2010-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick.spec.in: Fix RPM build.  PerlMagick was not being
	built due to Makefile changes.  Resolves SourceForge issue
	#2952696 "RPM build broken: (Perl) file not found by glob".

	* magick/quantize.c (ReduceImageColors): Progress message should
	include the image file name.

2010-03-24  Glenn Randers-Pehrson  <glennrp@simple...>
	* Revised coders/jpeg.c to preserve the Exif profile.

2010-03-24  Glenn Randers-Pehrson  <glennrp@simple...>
	* coders/png.c (ReadOnePNGImage): Eliminated some of the deprecated
	direct access to ping_info->members.
        Eliminated support of very old libpng versions (1.0.11 and earlier).

2010-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/delegate.c (GetPostscriptDelegateInfo): Add support for
	invoking "gs-cmyk" and "gs-cmyka" entries in delegates.mgk when