@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2010-05-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/txt.c (ReadTXTImage): Matte channel was not being enabled
+        for non-opaque images.
+
+</UL>
+<p>
 2010-04-25  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
